--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/Hopital.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jsch-0.1.51.jar=lib\\jsch-0.1.51.jar
+file.reference.mysql-connector-java-5.1.18-bin.jar=lib\\mysql-connector-java-5.1.18-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jsch-0.1.51.jar}:\
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -54,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=hopital.Main
+main.class=controleur.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
