--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/Hopital.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=lib\\jcalendar-1.4.jar
 file.reference.jsch-0.1.51.jar=lib\\jsch-0.1.51.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=lib\\mysql-connector-java-5.1.18-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jsch-0.1.51.jar}:\
-    ${file.reference.mysql-connector-java-5.1.18-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
